--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
     "moment": "^2.30.1",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
